# otus_prof_dupfinder

./: CMakeLists.txt  Config.cpp  Config.h  DupFinder.cpp  DupFinder.h  FileClass.cpp  FileClass.h  README.md  main.cpp
.github/workflows/: release.yml
